// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoWrapper correctly renders default markup 1`] = `
<div
  className="movie-card__wrap"
>
  <div
    className="movie-card__info"
  >
    Childs elements
  </div>
</div>
`;

exports[`InfoWrapper correctly renders translate markup 1`] = `
<div
  className="movie-card__wrap movie-card__translate-top"
>
  <div
    className="movie-card__info"
  >
    Childs elements
  </div>
</div>
`;
